Finished Photo Blog Excercise

--- a/selector.html
+++ b/selector.html
@@ -12,14 +12,14 @@
     <h1>Todo list</h1>
 
     <ul>
-        <li>
-            <input type="checkbox">
+        <li class="completed">
+            <input type="checkbox" checked>
             Walk Rusty
         </li>
 
-        <li>
+        <li class="completed">
             <input type="checkbox">
-            Groceries
+            Buy Groceries
         </li>
 
         <li id="special">
