--- a/ColorGameProject/colorGame.html
+++ b/ColorGameProject/colorGame.html
@@ -13,6 +13,10 @@
 
     <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
 
+    <div>
+        <span id="message"></span>
+    </div>
+
     <div id="container">
         <div class="square"></div>
         <div class="square"></div>
