--- a/ColorGameProject/colorGame.html
+++ b/ColorGameProject/colorGame.html
@@ -11,10 +11,17 @@
 
 <body>
 
-    <h1>The Great <span id="colorDisplay">RGB</span> Color Game</h1>
+    <h1>The Great 
+        <br>
+        <span id="colorDisplay">RGB</span>
+        <br>
+         Color Game</h1>
 
-    <div>
+    <div id="stripe">
+        <button id="reset">New Colors</button>
         <span id="message"></span>
+        <button id="easyBtn">Easy</button>
+        <button id="hardBtn">Hard</button>
     </div>
 
     <div id="container">
