--- a/ColorGameProject/colorGame.html
+++ b/ColorGameProject/colorGame.html
@@ -20,8 +20,8 @@
     <div id="stripe">
         <button id="reset">New Colors</button>
         <span id="message"></span>
-        <button id="easyBtn">Easy</button>
-        <button id="hardBtn">Hard</button>
+        <button class="mode">Easy</button>
+        <button class="mode selected">Hard</button>
     </div>
 
     <div id="container">
